# kernels-refactor

./: .gitignore  CITATION.cff  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: cd.yml  ci.yml  pages.yml  project-automation.yml  python-tests.yml
benchmarks/: benchmark_nist_ir8356.cpp  benchmark_pow_nonce_search.cpp  benchmark_scaling_falsification.cpp
docs/: architecture.md  mathematical_foundations.md
examples/: demo_quantum_kernel.cpp  demo_qudit_kernel.cpp
include/kernel/: kernel.hpp
include/kernel/core/: constants.hpp  theorems.hpp  types.hpp
include/kernel/kernel/: arithmetic_periodicity.hpp  composition.hpp  interrupts.hpp  ipc.hpp  memory.hpp  process.hpp  quantum_kernel.hpp
include/kernel/ohm/: coherence_duality.hpp
include/kernel/oracle/: master_eigen_oracle.hpp
include/kernel/pipeline/: kernel_pipeline.hpp  kernel_state.hpp  spectral_bridge.hpp
include/kernel/quantum/: chiral_gate.hpp  ladder_benchmark.hpp  ladder_search.hpp  palindrome_precession.hpp
include/kernel/qudit/: qudit_kernel.hpp
tests/integration/: test_battery_analogy.cpp  test_bft_extended.cpp  test_bft_stress.cpp  test_kernel_pipeline.cpp  test_master_eigen_oracle.cpp  test_noise_scaling_phase_transition.cpp  test_ohm_coherence.cpp  test_pipeline_theorems.cpp  test_qudit_kernel.cpp
tests/unit/: test_chiral_nonlinear_gate.cpp  test_coherent_search.cpp  test_core_headers.cpp  test_interrupt_nist.cpp  test_ipc.cpp  test_palindrome_precession.cpp
